# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.15.8
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- manpage: Make clear that overlays must be paths, not repo-names.
	- manpage: Give some examples for egencache hooks with eix-sync.

*eix-0.15.7
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Allow USE dependencies http://bugs.gentoo.org/show_bug.cgi?id=264798
	- Update citation reference for "portage with sqlite"
	- Introduce EXPORT_PORTDIR_OVERLAY to export a new PORTDIR_OVERLAY with
	  added/excluded overlays to deal with eclasses. This somewhat fixes
	  http://bugs.gentoo.org/show_bug.cgi?id=249843
	  and http://bugs.gentoo.org/show_bug.cgi?id=265854

*eix-0.15.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce EAPI_REGEX for EAPI-suffixed ebuilds (GLEP 55).
	- Introduce ...installedmarked... and ...availablemarked... to print
	  only those installed/available versions marked by --pipe.
	- Fix reference to obsolete cache type in eix-sync help page.
	- Make scripts more POSIX (e.g. "local" only at a function start).

*eix-0.15.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce special overlay name ~ for cache methods eix/eix* to allow
	  easily reading of previous overlay data.
	- Fix regression which did not work for overlay labels/numbers for
	  cache method eix/eix*.
	- Be a bit more restrictive for the -H default since there are
	  packages containing "http" in their name.
	- Fix segfault/endless loop when an optional last argument is omitted.

*eix-0.15.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Hack around http://bugs.gentoo.org/show_bug.cgi?id=255711
	  (cannot compare const_backward_iterator with backward_iterator).
	- Use signed char instead of char for FullFlag, see
	  http://bugs.gentoo.org/show_bug.cgi?id=255994
	- Allow "virtual" for "provide || category-name" in DEFAULT_MATCH_FIELD
	  and prefer this in the defaults to avoid confusion for virtual/, see